add sign in page

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Frontend Kit</title>
+    <title>RC BIM　X　雲端現場查驗系統</title>
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="icon" href="./img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
                 <a class="navbar-brand" href="./index.html">
                     <img alt="Brand" src="./img/icon_48.png" onError="this.onerror=null;this.src='./img/icon700.svg;">
                 </a>
-                <a class="navbar-brand" href="./index.html">Frontend Kit</a>
+                <a class="navbar-brand" href="./index.html">RC BIM　X　雲端現場查驗系統</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
