--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -28,6 +28,8 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="./overview.html">Overview</a></li>
+                    <li><a href="./setting.html">Setting</a></li>
                     <li><a href="./index.html">Home</a></li>
                 </ul>
             </div>
